fix: improve layout of obsolete names section and adjust styling for better alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -121,7 +121,7 @@ td {
       display: flex;
       flex: 2;
       gap: 10px;
-      align-items: center;
+      margin-top: 5px;
     }
     &-source {
       font-size: 0.8rem;
